--- a/catalog/templates/registration/password_reset_complete.html
+++ b/catalog/templates/registration/password_reset_complete.html
@@ -1,5 +1,6 @@
 {% extends "catalog/base.html" %}
 {% block content %}
-  <h2>Password reset complete</h2>
-  <p>You can now <a href="{% url 'login' %}">log in</a> with your new password.</p>
+<h2>Password Reset Complete</h2>
+<p>Your password has been successfully updated!</p>
+<a href="{% url 'login' %}" class="btn btn-primary">Login</a>
 {% endblock %}
