--- a/catalog/templates/registration/password_reset_confirm.html
+++ b/catalog/templates/registration/password_reset_confirm.html
@@ -1,9 +1,9 @@
 {% extends "catalog/base.html" %}
 {% block content %}
-  <h2>Enter new password</h2>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Change password</button>
-  </form>
+<h2>Set New Password</h2>
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="btn btn-success">Change Password</button>
+</form>
 {% endblock %}
