--- a/catalog/templates/registration/password_reset_form.html
+++ b/catalog/templates/registration/password_reset_form.html
@@ -1,9 +1,10 @@
 {% extends "catalog/base.html" %}
 {% block content %}
-  <h2>Forgot your password?</h2>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Send reset email</button>
-  </form>
+<h2>Reset Password</h2>
+<p>Enter your email to receive a password reset link.</p>
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="btn btn-primary">Send Reset Email</button>
+</form>
 {% endblock %}
