--- a/catalog/templates/catalog/author_form.html
+++ b/catalog/templates/catalog/author_form.html
@@ -1,15 +1,20 @@
 {% extends "catalog/base.html" %}
 {% load crispy_forms_tags %}
+
 {% block content %}
-{% if perms.catalog.add_author or perms.catalog.change_author %}
-<h2>{% if form.instance.pk %}Update Author{% else %}Add Author{% endif %}</h2>
-<form method="POST" enctype="multipart/form-data">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-{% else %}
-<p>You do not have permission to access this feature.</p>
-<a href="{% url 'index' %}">Home</a>
-{% endif %}
+<div class="container mt-4">
+  <h2>{% if form.instance.pk %}Update Author{% else %}Add Author{% endif %}</h2>
+
+  <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary mt-2">Submit</button>
+  </form>
+
+  {% if form.instance.pk %}
+    <a href="{% url 'author_detail' form.instance.id %}" class="btn btn-secondary mt-2">Cancel</a>
+  {% else %}
+    <a href="{% url 'author_list' %}" class="btn btn-secondary mt-2">Cancel</a>
+  {% endif %}
+</div>
 {% endblock %}
