--- a/catalog/templates/registration/login.html
+++ b/catalog/templates/registration/login.html
@@ -1,13 +1,10 @@
 {% extends "catalog/base.html" %}
-
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Login</button>
-  <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
-
-
-  </form>
+<h2>Login</h2>
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="btn btn-primary">Login</button>
+</form>
+<p class="mt-2"><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
 {% endblock %}
